--- a/PortfolioReactVer/src/index.css
+++ b/PortfolioReactVer/src/index.css
@@ -1,68 +1,76 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-color: black;
+    height: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.header-container {
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(assets/tokyo-header.jpg);
+    background-size: 600px 200px;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 90px;
+    width: 100%;
+    border-bottom: 2px solid rgb(181, 126, 0);
+    border-top: 2px solid rgb(181, 126, 0);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.page-container{
+    display: flex;
+    justify-content: center;
+    height: 97vh;
+    gap: 1rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.centered-container {
+    width: 90%;
+    max-width: 600px;
+    padding: 2rem;
+    background-color: rgba(0, 0, 0, 0.622);
+    border-radius: 2px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.504);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+nav {
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid rgb(181, 126, 0);
+}
+
+nav a{
+    padding: 10px;
+    padding-inline: 20px;
+    color: white;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+}
+
+nav a:hover{
+    background-color: rgba(116, 116, 116, 0.622);
+    transition: 0.35s ease;
+}
+
+.body-container {
+    height: 65%;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.content-container{
+    color: white;
+    font-family: Arial, sans-serif;
+    width: 50%;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.504);
+}
+
+.footer-container{
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
 }
