--- a/PortfolioReactVer/src/index.css
+++ b/PortfolioReactVer/src/index.css
@@ -69,6 +69,10 @@ nav a:hover{
 .content-container{
     width: 50%;
     padding: 10px;
+    font-size: 12px;
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
 }
 
 .footer-container{
@@ -77,23 +81,8 @@ nav a:hover{
     font-size: 12px;
 }
 
-.bio{
-    width: 100%;
-}
-
-.bio-text{
-    font-size: 12px;
-    color: white;
-    font-family: Arial, sans-serif;
-}
-
-.bio-media{
-    display: flex;
-    flex: row;
-}
-
 .bio-me{
-    width: 80%;
+    width: 100%;
 }
 
 .logo-container{
