--- a/PortfolioReactVer/src/index.css
+++ b/PortfolioReactVer/src/index.css
@@ -67,12 +67,42 @@ nav a:hover{
 }
 
 .content-container{
-    width: 50%;
+    width: 45%;
     padding: 10px;
     font-size: 12px;
     color: white;
     font-family: Arial, sans-serif;
     text-align: center;
+    gap: 1px;
+}
+
+.content-link {
+    color: white;
+    text-decoration: none;
+}
+
+.content-link p{
+    height: 60%;
+    padding: 5px;
+    padding-inline: 5px;
+    border-bottom: 2px solid rgb(181, 126, 0);
+}
+
+.content-link p:hover{
+    background-color: rgba(116, 116, 116, 0.622);
+    transition: 0.35s ease;
+    cursor: pointer;
+}
+
+.content-image-mask {
+    width: auto;         /* or 300px, etc. */
+    height: 100%;        /* % of parent container */
+    overflow: hidden;
+}
+  
+.content-image-mask img {
+    width: auto;        /* or 100%, depending on your needs */
+    height: auto;
 }
 
 .footer-container{
